--- a/SessionKStudio/week09/china.html
+++ b/SessionKStudio/week09/china.html
@@ -105,13 +105,12 @@
 
     <div id="iphone">
       <div id="menu">
-        <div class="headline">CHINA CHALET</div>
+        <img class="image" src="chinA.png" width="360px" />
+        <img class="hua" src="hua.png" width="350px" />
+        <img class="ting" src="ting.png" width="350px" />
         <img class="dragon" src="dragon.png" />
-        <img class="label" src="label.png" alt="meal" width="300px" />
       </div>
-
-      <img class="cai" src="menu.png" />
-    </div>
+    
 
     <div id="tv">
       <img class="disco" src="sparkle.gif" />
