--- a/index.html
+++ b/index.html
@@ -7,154 +7,114 @@
 
   <body>
     <br />
-    <h1>CORE INTERACTION HOME PAGE</h1>
-    <h1>STUDIO SESSION-K</h1>
-    <p>AARON</p>
+    <h1>
+      <span>AARON</span>
+      <span>AARON</span>
+    </h1>
+
+    <div id="container">
+      <img class="me" src="me.png" width="60px" />
+      <img class="mee" src="me2.png" width="100px" />
+      <img class="meee" src="me3.png" width="70px" />
+      <img class="meeee" src="me4.png" width="80px" />
+
+      <img class="card" src="card.png" width="250px" />
+    </div>
+    <h1>CORE INTERACTION</h1>
     <br />
     <br />
+
     <h3>STUDIO</h3>
-    <h3>WEEK01</h3>
+
+    <h3>WEEK03</h3>
+
     <h3>
-      <h3>
-        <em>
-          <a
-            href="SessionKStudio/week01/week01-class01/EX01/week01class01ex01.html"
-          >
-            Week01 Class01 HW</a
-          ></em
-        >
-      </h3>
+      <em>
+        <a href="SessionKStudio/week03/week03-class02/week03class02hw02.html">
+          Week03 Class02 LIGHT
+        </a>
+      </em>
+    </h3>
 
-      <h3>WEEK02</h3>
-      <h3>
-        <em>
-          <a href="SessionKStudio/week02/week02-class01/week02class01ex.html">
-            Week02 Class01 Exercise
-          </a></em
-        >
-      </h3>
-      <h3>
-        <em>
-          <a href="SessionKStudio/week02/week02-class01/week02class01hw01.html">
-            Week02 Class01 HW01
-          </a></em
-        >
-      </h3>
-      <h3>
-        <em>
-          <a href="SessionKStudio/week02/week02-class01/week02class01hw02.html">
-            Week02 Class01 HW02
-          </a></em
-        >
-      </h3>
+    <h3>
+      <em>
+        <a href="SessionKStudio/week03/week03-class02/week03class02hw01.html">
+          Week03 Class02 OBSCURE
+        </a>
+      </em>
+    </h3>
 
-      <h3>
-        <em>
-          <a href="SessionKStudio/week02/week02-class02/week02class02hw.html"
-            >Week02 Class02 HW
-          </a>
-        </em>
-      </h3>
+    <h3>
+      <em>
+        <a href="SessionKStudio/week03/week03-class02/week03class02hw03.html">
+          Week03 Class02 Finale
+        </a>
+      </em>
+    </h3>
 
-      <h3>WEEK03</h3>
+    <h3>
+      <em>
+        <a href="SessionKStudio/week03/week03-class02/homepage.html">
+          Week03 Class02 HOMEPAGE
+        </a>
+      </em>
+    </h3>
+    <h3>WEEK04</h3>
+    <h3>
+      <em>
+        <a href="SessionKStudio/week05/week05class02ex/scroll.html">
+          Week04 Class02 Exercise
+        </a>
+      </em>
+    </h3>
+    <h3>WEEK06</h3>
+    <h3>
+      <em>
+        <a href="SessionKStudio/week06/week06class01/week06class02ex.html">
+          Week06 Class02 Exercise
+        </a>
+      </em>
+    </h3>
 
-      <h3>
-        <em
-          ><a href="SessionKStudio/week03/week03-class01/week03class01hw.html">
-            Week03 Class01 HW</a
-          >
-        </em>
-      </h3>
-
+    <h3>
+      <em>
+        <a href="SessionKStudio/week06/week06class01/week06class02ex.html">
+          Week06 Class02 Exercise
+        </a>
+      </em>
+    </h3>
+    <h3>ARCHIVE</h3>
+    <h3>
+      <em>
+        <a href="SessionKStudio/week06/week06class01/ARCHIVE/html/Home.html">
+          ARCHIVE;BOYFRONT
+        </a>
+      </em>
+    </h3>
+    <h3>S,M,L,XL</h3>
+    <h3>
+      <em>
+        <a href="SessionKStudio/week09/china.html">
+          S,M,L/CHINA CHALET
+        </a>
+      </em>
+    </h3>
+    <div id="lab">
+      <h3 class="lab">LAB</h3>
       <h3>
         <em>
-          <a href="SessionKStudio/week03/week03-class02/week03class02hw02.html">
-            Week03 Class02 LIGHT
+          <a href="SessionKLab/indexx.html">
+            HW 6 — use a button element with JS
           </a>
         </em>
       </h3>
-
       <h3>
         <em>
-          <a href="SessionKStudio/week03/week03-class02/week03class02hw01.html">
-            Week03 Class02 OBSCURE
+          <a href="SessionKLab/index2.html">
+            HW 7 — use a select HTML element with JS
           </a>
         </em>
       </h3>
-
-      <h3>
-        <em>
-          <a href="SessionKStudio/week03/week03-class02/week03class02hw03.html">
-            Week03 Class02 Finale
-          </a>
-        </em>
-      </h3>
-
-      <h3>
-        <em>
-          <a href="SessionKStudio/week03/week03-class02/homepage.html">
-            Week03 Class02 HOMEPAGE
-          </a>
-        </em>
-      </h3>
-      <h3>WEEK04</h3>
-      <h3>
-        <em>
-          <a href="SessionKStudio/week05/week05class02ex/scroll.html">
-            Week04 Class02 Exercise
-          </a>
-        </em>
-      </h3>
-      <h3>WEEK06</h3>
-      <h3>
-        <em>
-          <a href="SessionKStudio/week06/week06class01/week06class02ex.html">
-            Week06 Class02 Exercise
-          </a>
-        </em>
-      </h3>
-
-      <h3>
-        <em>
-          <a href="SessionKStudio/week06/week06class01/week06class02ex.html">
-            Week06 Class02 Exercise
-          </a>
-        </em>
-      </h3>
-      <h3>ARCHIVE</h3>
-      <h3>
-        <em>
-          <a href="SessionKStudio/week06/week06class01/ARCHIVE/html/Home.html">
-            ARCHIVE;BOYFRONT
-          </a>
-        </em>
-      </h3>
-      <h3>S,M,L,XL</h3>
-      <h3>
-        <em>
-          <a href="SessionKStudio/week09/china.html">
-            S,M,L/CHINA CHALET
-          </a>
-        </em>
-      </h3>
-      <div id="lab">
-        <h3 class="lab">LAB</h3>
-        <h3>
-          <em>
-            <a href="SessionKLab/indexx.html">
-              HW 6 — use a button element with JS
-            </a> 
-          </em>
-        </h3>
-        <h3>
-          <em>
-            <a href="SessionKLab/index2.html">
-              HW 7 — use a select HTML element with JS
-            </a> 
-          </em>
-        </h3>
-     
-      </div>
-   
+    </div>
   </body>
 </html>
