--- a/SessionKStudio/week09/china.html
+++ b/SessionKStudio/week09/china.html
@@ -110,16 +110,16 @@
         <img class="ting" src="ting.png" width="350px" />
         <img class="dragon" src="dragon.png" />
       </div>
-    
+    </div>
 
     <div id="tv">
+      <h1>cHiNa ChAlEt/telahc anihc</h1>
       <img class="disco" src="sparkle.gif" />
-      <h1 contenteditable spellcheck="false">cHiNa ChAlEt/telahc anihc</h1>
-
       <audio id="myAudio" autoplay>
         <source src="fan.mp3" />
       </audio>
     </div>
+
     <script>
       function myFunction() {
         var x = document.getElementById("myAudio").autoplay;
