--- a/SessionKStudio/week09/china.html
+++ b/SessionKStudio/week09/china.html
@@ -113,8 +113,13 @@
     </div>
 
     <div id="tv">
-      <h1>cHiNa ChAlEt/telahc anihc</h1>
-      <img class="disco" src="sparkle.gif" />
+      <h1 class="glitch" data-text="GLITCH">cHiNa ChAlEt/telahc anihc</h1>
+
+      <h3 class="glow">CHINA CHALET</h3>
+
+      <img class="plate" src="plate.png" width="1520px" />
+      <img class="techno" src="techno.png" width="1520px" />
+
       <audio id="myAudio" autoplay>
         <source src="fan.mp3" />
       </audio>
