--- a/SessionKStudio/week09/china.html
+++ b/SessionKStudio/week09/china.html
@@ -116,9 +116,16 @@
       <h1 class="glitch" data-text="GLITCH">cHiNa ChAlEt/telahc anihc</h1>
 
       <h3 class="glow">CHINA CHALET</h3>
+      <img class="lineup" src="lineup.png" />
+      <img class="mat" src="4mat.png" />
+      <a href="https://open.spotify.com/artist/7jmPuE7ygwQjTkvrd8creZ">
+        <img class="lin" src="linfeng.png"
+      /></a>
+      <img class="meal" src="tag.png" width="600px" />
 
       <img class="plate" src="plate.png" width="1520px" />
       <img class="techno" src="techno.png" width="1520px" />
+      <img class="list" src="play.png" width="800px" />
 
       <audio id="myAudio" autoplay>
         <source src="fan.mp3" />
