--- a/SessionKStudio/week09/china.html
+++ b/SessionKStudio/week09/china.html
@@ -106,9 +106,9 @@
     <div id="iphone">
       <div id="menu">
         <img class="image" src="chinA.png" width="360px" />
-        <img class="hua" src="hua.png" width="350px" />
-        <img class="ting" src="ting.png" width="350px" />
-        <img class="dragon" src="dragon.png" />
+        <img class="online" src="online.png" width="350px" />
+        <img class="box" src="box.png" width="340px" />
+        <img class="hua" src="hua.png" width="120px" />
       </div>
     </div>
 
@@ -116,6 +116,7 @@
       <h1 class="glitch" data-text="GLITCH">cHiNa ChAlEt/telahc anihc</h1>
 
       <h3 class="glow">CHINA CHALET</h3>
+      <img class="chop" src="chop.png" />
       <img class="lineup" src="lineup.png" />
       <img class="mat" src="4mat.png" />
       <a href="https://open.spotify.com/artist/7jmPuE7ygwQjTkvrd8creZ">
@@ -127,8 +128,9 @@
       <img class="techno" src="techno.png" width="1520px" />
       <img class="list" src="play.png" width="800px" />
 
-      <audio id="myAudio" autoplay>
-        <source src="fan.mp3" />
+      <audio id="myAudio" controls autoplay>
+        <source src="fan.ogg" type="audio/ogg" />
+        <source src="fan.mp3" type="audio/mpeg" />
       </audio>
     </div>
 
