--- a/SessionKStudio/week09/china.html
+++ b/SessionKStudio/week09/china.html
@@ -109,6 +109,8 @@
         <img class="online" src="online.png" width="350px" />
         <img class="box" src="box.png" width="340px" />
         <img class="hua" src="hua.png" width="120px" />
+        <img class="drink" src="drink.png" width="360px" />
+        <img class="order" src="order.png" width="340px" />
       </div>
     </div>
 
