--- a/index.html
+++ b/index.html
@@ -6,93 +6,31 @@
   </head>
 
   <body>
-    <br />
-    <h1>
-      <span>AARON</span>
-      <span>AARON</span>
-    </h1>
-
+    <img class="panel1" src="panel.png" width="300px" />
+    <img class="panel2" src="lab.png" width="300px" />
     <div id="container">
-      <img class="me" src="me.png" width="60px" />
       <img class="mee" src="me2.png" width="100px" />
-      <img class="meee" src="me3.png" width="70px" />
+      <img class="meee" src="me3.png" width="220px" />
       <img class="meeee" src="me4.png" width="80px" />
-
-      <img class="card" src="card.png" width="250px" />
     </div>
-    <h1>CORE INTERACTION</h1>
-    <br />
-    <br />
 
-    <h3>STUDIO</h3>
-
-    <h3>WEEK03</h3>
-
-    <h3>
-      <em>
-        <a href="SessionKStudio/week03/week03-class02/week03class02hw02.html">
-          Week03 Class02 LIGHT
-        </a>
-      </em>
-    </h3>
-
-    <h3>
-      <em>
-        <a href="SessionKStudio/week03/week03-class02/week03class02hw01.html">
-          Week03 Class02 OBSCURE
-        </a>
-      </em>
-    </h3>
-
-    <h3>
+    <h3 class="finale">
       <em>
         <a href="SessionKStudio/week03/week03-class02/week03class02hw03.html">
-          Week03 Class02 Finale
+          THINGS A STORY <br />OF SIXTIES
         </a>
       </em>
     </h3>
 
-    <h3>
-      <em>
-        <a href="SessionKStudio/week03/week03-class02/homepage.html">
-          Week03 Class02 HOMEPAGE
-        </a>
-      </em>
-    </h3>
-    <h3>WEEK04</h3>
-    <h3>
-      <em>
-        <a href="SessionKStudio/week05/week05class02ex/scroll.html">
-          Week04 Class02 Exercise
-        </a>
-      </em>
-    </h3>
-    <h3>WEEK06</h3>
-    <h3>
-      <em>
-        <a href="SessionKStudio/week06/week06class01/week06class02ex.html">
-          Week06 Class02 Exercise
-        </a>
-      </em>
-    </h3>
-
-    <h3>
-      <em>
-        <a href="SessionKStudio/week06/week06class01/week06class02ex.html">
-          Week06 Class02 Exercise
-        </a>
-      </em>
-    </h3>
-    <h3>ARCHIVE</h3>
-    <h3>
+    <h3 class="boy">
       <em>
         <a href="SessionKStudio/week06/week06class01/ARCHIVE/html/Home.html">
           ARCHIVE;BOYFRONT
         </a>
       </em>
     </h3>
-    <h3>S,M,L,XL</h3>
-    <h3>
+
+    <h3 class="sm">
       <em>
         <a href="SessionKStudio/week09/china.html">
           S,M,L/CHINA CHALET
