--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   </head>
 
   <body>
+    <img class="profile" src="profile.png" width="300px" />
     <img class="panel1" src="panel.png" width="300px" />
     <img class="panel2" src="lab.png" width="300px" />
     <div id="container">
@@ -38,18 +39,17 @@
       </em>
     </h3>
     <div id="lab">
-      <h3 class="lab">LAB</h3>
-      <h3>
+      <h3 class="k">
         <em>
           <a href="SessionKLab/indexx.html">
-            HW 6 — use a button element with JS
+            Use a button element <br />with JS
           </a>
         </em>
       </h3>
-      <h3>
+      <h3 class="k2">
         <em>
           <a href="SessionKLab/index2.html">
-            HW 7 — use a select HTML element with JS
+            Use a select HTML <br />element with JS
           </a>
         </em>
       </h3>
