--- a/SessionKStudio/week09/china.html
+++ b/SessionKStudio/week09/china.html
@@ -134,6 +134,8 @@
         <source src="fan.ogg" type="audio/ogg" />
         <source src="fan.mp3" type="audio/mpeg" />
       </audio>
+      <div class="color"></div>
+      <img class="track" src="track.png" width="1000px" />
     </div>
 
     <script>
