--- a/SessionKStudio/week09/china.html
+++ b/SessionKStudio/week09/china.html
@@ -135,6 +135,7 @@
         <source src="fan.mp3" type="audio/mpeg" />
       </audio>
       <div class="color"></div>
+      <img class="thunder" src="thunder.gif" width="2000px" />
       <img class="track" src="track.png" width="1000px" />
     </div>
 
