--- a/SessionKStudio/week09/china.html
+++ b/SessionKStudio/week09/china.html
@@ -135,8 +135,15 @@
         <source src="fan.mp3" type="audio/mpeg" />
       </audio>
       <div class="color"></div>
+
       <img class="thunder" src="thunder.gif" width="2000px" />
       <img class="track" src="track.png" width="1000px" />
+      <img class="tech" src="tech.png" width="2600px" />
+      <img class="word" src="id.png" width="2600px" />
+      <img class="disco" src="disco.png" width="1500px" />
+      <img class="bubble" src="bubble.gif" height="1700px" />
+
+      <div class="color2"></div>
     </div>
 
     <script>
