--- a/SessionKStudio/week09/china.html
+++ b/SessionKStudio/week09/china.html
@@ -142,6 +142,9 @@
       <img class="word" src="id.png" width="2600px" />
       <img class="disco" src="disco.png" width="1500px" />
       <img class="bubble" src="bubble.gif" height="1700px" />
+      <img class="girl" src="girl.gif" width="1300px" />
+      <img class="girl2" src="girl.gif" width="1300px" />
+      <img class="girl3" src="girl.gif" width="1300px" />
 
       <div class="color2"></div>
     </div>
