--- a/SessionKStudio/week09/china.html
+++ b/SessionKStudio/week09/china.html
@@ -141,7 +141,14 @@
       <img class="tech" src="tech.png" width="2600px" />
       <img class="word" src="id.png" width="2600px" />
       <img class="disco" src="disco.png" width="1500px" />
+      <img class="ball" src="disco.gif" width="500px" />
       <img class="bubble" src="bubble.gif" height="1700px" />
+      <p>DANCE POP</p>
+      <p class="tex">PRETTY PLEASE</p>
+      <audio id="myAudio2" controls autoplay>
+        <source src="dua.ogg" />
+        <source src="dua.mp3" />
+      </audio>
       <img class="girl" src="girl.gif" width="1300px" />
       <img class="girl2" src="girl.gif" width="1300px" />
       <img class="girl3" src="girl.gif" width="1300px" />
