--- a/SessionKStudio/week09/china.html
+++ b/SessionKStudio/week09/china.html
@@ -145,10 +145,11 @@
       <img class="bubble" src="bubble.gif" height="1700px" />
       <p>DANCE POP</p>
       <p class="tex">PRETTY PLEASE</p>
-      <audio id="myAudio2" controls autoplay>
+      <audio id="myaudio" controls autoplay>
         <source src="dua.ogg" />
         <source src="dua.mp3" />
       </audio>
+
       <img class="girl" src="girl.gif" width="1300px" />
       <img class="girl2" src="girl.gif" width="1300px" />
       <img class="girl3" src="girl.gif" width="1300px" />
