--- a/SessionKStudio/week09/china.html
+++ b/SessionKStudio/week09/china.html
@@ -130,7 +130,7 @@
       <img class="techno" src="techno.png" width="1520px" />
       <img class="list" src="play.png" width="800px" />
 
-      <audio id="myAudio" controls autoplay>
+      <audio class="myAudio" controls autoplay>
         <source src="fan.ogg" type="audio/ogg" />
         <source src="fan.mp3" type="audio/mpeg" />
       </audio>
@@ -145,7 +145,7 @@
       <img class="bubble" src="bubble.gif" height="1700px" />
       <p>DANCE POP</p>
       <p class="tex">PRETTY PLEASE</p>
-      <audio id="myaudio" controls autoplay>
+      <audio class="myaudio" controls autoplay>
         <source src="dua.ogg" />
         <source src="dua.mp3" />
       </audio>
