--- a/iarsn/zine.html
+++ b/iarsn/zine.html
@@ -7,6 +7,15 @@
   </head>
 
   <body>
-    <img class="pic1" src="zine1.jpg" width="100px" />
+    <div id="container">
+      <img class="pic1" src="zine1.jpg" height="150px" />
+      <img class="pic2" src="zine2.jpg" height="150px" />
+      <img class="pic3" src="zine3.jpg" height="150px" />
+      <img class="pic4" src="zine4.jpg" height="150px" />
+      <img class="pic5" src="zine5.jpg" height="150px" />
+      <img class="pic6" src="zine6.jpg" height="150px" />
+      <img class="pic7" src="zine7.jpg" height="150px" />
+      <img class="pic8" src="zine8.jpg" height="150px" />
+    </div>
   </body>
 </html>
