--- a/iarsn/iarsn.html
+++ b/iarsn/iarsn.html
@@ -11,7 +11,7 @@
       <a href="zine.html">
         <img class="pic1" src="zine1.jpg" width="250px" />
       </a>
-      <img class="pic2" src="chain1.jpg" width="400px" />
+      <img class="pic2" src="chain1.png" width="400px" />
       <img class="pic3" src="screen1.jpg" width="320px" />
       <img class="pic4" src="xiao1.jpg" width="470px" />
     </div>
