--- a/iarsn/iarsn.html
+++ b/iarsn/iarsn.html
@@ -7,6 +7,7 @@
   </head>
 
   <body>
+    <div id="laptop">
     <div id="container">
       <a href="zine.html">
         <img class="pic1" src="zine1.jpg" width="250px" />
@@ -16,5 +17,11 @@
       <img class="pic4" src="xiao1.jpg" width="470px" />
     </div>
     <img class="logo" src="logo.png" width="100px" />
+  </div>
+
+  <div id="phone">
+    <div id="container">
+      <img class="pic1" src="chain2.jpg" width="970px">
+  </div>
   </body>
 </html>
