--- a/iarsn/iarsn.html
+++ b/iarsn/iarsn.html
@@ -21,7 +21,8 @@
 
   <div id="phone">
     <div id="container">
-      <img class="pic1" src="chain2.jpg" width="970px">
+      <img class="icon" src="icon.png">
+      <img class="pic1" src="chain2.jpg" width="670px">
   </div>
   </body>
 </html>
