--- a/iarsn/iarsn.html
+++ b/iarsn/iarsn.html
@@ -8,21 +8,23 @@
 
   <body>
     <div id="laptop">
-    <div id="container">
-      <a href="zine.html">
-        <img class="pic1" src="zine1.jpg" width="250px" />
-      </a>
-      <img class="pic2" src="chain1.png" width="400px" />
-      <img class="pic3" src="screen1.jpg" width="320px" />
-      <img class="pic4" src="xiao1.jpg" width="470px" />
+      <div id="container">
+        <a href="zine.html">
+          <img class="pic1" src="zine1.jpg" width="250px" />
+        </a>
+        <img class="pic2" src="chain1.png" width="400px" />
+        <img class="pic3" src="screen1.jpg" width="320px" />
+        <img class="pic4" src="xiao1.jpg" width="470px" />
+      </div>
+      <img class="logo" src="logo.png" width="100px" />
     </div>
-    <img class="logo" src="logo.png" width="100px" />
-  </div>
 
-  <div id="phone">
-    <div id="container">
-      <img class="icon" src="icon.png">
-      <img class="pic1" src="chain2.jpg" width="670px">
-  </div>
+    <div id="phone">
+      <div id="container">
+        <img class="icon" src="icon.png" />
+        <img class="pic1" src="chain2.jpg" width="670px" />
+        <img class="pic2" src="zine8.jpg" width="1470px" />
+      </div>
+    </div>
   </body>
 </html>
