--- a/iarsn/iarsn.html
+++ b/iarsn/iarsn.html
@@ -22,8 +22,11 @@
     <div id="phone">
       <div id="container">
         <img class="icon" src="icon.png" />
-        <img class="pic1" src="chain2.jpg" width="670px" />
+        <img class="pic1" src="chain2.jpg" width="570px" />
         <img class="pic2" src="zine8.jpg" width="1470px" />
+        <img class="pic3" src="xiao1.jpg" width="970px" />
+        <img class="pic4" src="screen1.jpg" width="1470px" />
+        <img class="pic5" src="credit.png" />
       </div>
     </div>
   </body>
