--- a/iarsn/iarsn.html
+++ b/iarsn/iarsn.html
@@ -12,9 +12,15 @@
         <a href="zine.html">
           <img class="pic1" src="zine1.jpg" width="250px" />
         </a>
-        <img class="pic2" src="chain1.png" width="400px" />
-        <img class="pic3" src="screen1.jpg" width="320px" />
-        <img class="pic4" src="xiao1.jpg" width="470px" />
+        <a href="chain.html">
+          <img class="pic2" src="chain1.png" width="400px" />
+        </a>
+        <a href="screen.html">
+          <img class="pic3" src="screen1.jpg" width="320px" />
+        </a>
+        <a href="xiao.html">
+          <img class="pic4" src="xiao1.jpg" width="470px" />
+        </a>
       </div>
       <img class="logo" src="logo.png" width="100px" />
     </div>
@@ -22,10 +28,18 @@
     <div id="phone">
       <div id="container">
         <img class="icon" src="icon.png" />
-        <img class="pic1" src="chain2.jpg" width="570px" />
-        <img class="pic2" src="zine8.jpg" width="1470px" />
-        <img class="pic3" src="xiao1.jpg" width="970px" />
-        <img class="pic4" src="screen1.jpg" width="1470px" />
+        <a href="chain.html">
+          <img class="pic1" src="chain2.jpg" width="570px" />
+        </a>
+        <a href="zine.html">
+          <img class="pic2" src="zine8.jpg" width="1470px" />
+        </a>
+        <a href="xiao.html">
+          <img class="pic3" src="xiao1.jpg" width="970px" />
+        </a>
+        <a href="screen.html">
+          <img class="pic4" src="screen1.jpg" width="1470px" />
+        </a>
         <img class="pic5" src="credit.png" />
       </div>
     </div>
