--- a/iarsn/zine.html
+++ b/iarsn/zine.html
@@ -17,5 +17,12 @@
       <img class="pic7" src="zine7.jpg" height="150px" />
       <img class="pic8" src="zine8.jpg" height="150px" />
     </div>
+
+    <script>
+      img.onclick = function (event) {
+          document.getElementById("container").classList.add("visible");
+
+           var popupInfo = document;
+    </script>
   </body>
 </html>
